blocks/header/header.css
/* ... */
@supports (-webkit-touch-callout: none) {
  header .nav-top .search button,
  header .nav-bottom .search button {
    height: 43px;
  }
}

header .nav-top .search button::after,
header .nav-bottom .search button::after,
header .expanded .nav-top .search button::after,
header .expanded .nav-bottom .search button::after {
  display: none;
}

header .nav-middle {
  height: 123px;
  font-size: var(--body-font-size-xxxxs);
  line-height: 11px;
  padding: 0 12px;
  position: relative;
}

@media (max-width: 899px) {
  header .nav-middle {
    padding: 0 8px;
  }
}

header .nav-middle .expand-top {
  width: 23px;
  height: 12px;
  background-image: url('/icons/mobile-expand-top-nav.png');
  background-repeat: no-repeat;
  background-size: contain;
  cursor: pointer;
  position: absolute;
  left: 50%;
  top: 0;
}

header .nav-middle .expand-top.expanded {
  background-image: url('/icons/mobile-collapse-top-nav.png');
  background-repeat: no-repeat;
  background-size: contain;
}

header .nav-middle img {
  width: 156px;
  height: 100%;
}

header .nav-middle ul {
  padding-inline-start: 9px;
}

header .nav-middle > div > div > div {
  position: relative;
}

header .expanded .nav-top > div {
  flex-direction: row-reverse;
}

@media (min-width: 900px) {
  header .nav-middle ul {
    padding-inline-start: 15px;
  }

  header .expanded .nav-top {
    height: 40px;
  }

  header .expanded .nav-top > div {
    flex-direction: row;
  }

  header .expanded .nav-top > div .search form {
    padding-top: 0;
  }

  header .expanded .nav-top .search {
    flex: unset;
    display: block;
  }

  header .expanded .nav-top .search input {
    outline: 4px solid var(--background-grey-2);
    padding-top: 4px;
    margin-top: -3px;
  }
}

header .nav-bottom {
  display: none;
  font-family: var(--heading-font-family);
}

header .nav-bottom li a {
  padding-left: 50px;
  width: 100%;
  cursor: pointer;
  z-index: 4;
}

header .nav-bottom a:any-link {
  color: var(--background-color);
  font-size: var(--body-font-size-s);
  font-weight: 400;
}

header .nav-bottom ul {
  padding: 0 0 80px;
  transform: translateY(50px);
}

@media (max-width: 899px) {
  header .nav-bottom ul {
    margin-top: 25px;
  }
}

header .nav-bottom li::after {
  content: "";
  width: 19px;
  height: 16px;
  background-image: url('/icons/icon_pink-arrow-right-md.png');
  background-size: 16px 16px;
  background-repeat: no-repeat;
  display: block;
  margin-left: auto;
  transform: translate(-16px, -2px);
}

header .nav-bottom li a em {
  font-size: 1.5rem;
}

header .nav-bottom li a:hover {
  font-family: var(--heading-font-family);
  text-decoration: none;
  font-weight: bold;
}

header .nav-bottom li a > span:nth-child(2) {
  padding-left: 0.3rem;
}

@media (min-width: 900px) {
  header .nav-bottom li a > span:nth-child(2) {
    padding-left: 0;
    display: block;
  }
}

header .nav-bottom img {
  width: 32px;
  height: 32px;
  position: absolute;
  transform: translateY(-6px);
}

header .expanded {
  position: relative;
}

header .expanded .nav-bottom {
  display: block;
  background-color: var(--background-blue-1);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 11;
  overflow: auto;
}

header .nav-top li:first-of-type {
  padding-left: 0;
}

header .expanded .nav-bottom > div {
  height: 100%;
}

header .nav-bottom > div > div:nth-of-type(2) {
  display: block;
}

header .nav-bottom > div > div:nth-of-type(2),
header .nav-middle > div > div > div div:nth-of-type(3) {
  position: absolute;
  top: 0;
  right: 12px;
  width: 100px;
  border-radius: 0 0 12px 12px;
  height: 12px;
  border-left: 2px solid var(--color-blue-2);
  border-bottom: 2px solid var(--color-blue-2);
  border-right: 2px solid var(--color-blue-2);
  font-size: var(--body-font-size-xs);
  text-transform: uppercase;
  text-align: right;
  margin-left: auto;
  background-image: url('/icons/icon-explore-hamburger.png');
  background-position: 21px 6px;
  background-repeat: no-repeat;
  background-size: 17px 13px;
  padding: 8px 14px 8px 4px;
  cursor: pointer;
}

header .nav-middle > div > div > div div:nth-of-type(1) {
  position: relative;
  top: 37px;
  left: 4px;
}

header .nav-middle > div > div > div div:nth-of-type(2) {
  font-weight: 500;
  position: relative;
  top: 32px;
}

header .nav-middle > div > div > div div:nth-of-type(2) p {
  display: inline-block;
  position: absolute;
  top: -80px;
  left: 4px;
}

header .nav-middle > div > div > div div:nth-of-type(2) p,
header .nav-middle > div > div > div div:nth-of-type(2) p a {
  font-weight: 400;
}

@media (min-width: 900px) {
  header .nav-middle > div > div > div div:nth-of-type(2) p,
  header .nav-middle > div > div > div div:nth-of-type(2) p a {
  font-weight: 500;
  color: var(--text-color);
}
}

header .nav-middle > div > div > div div:nth-of-type(2) p:nth-of-type(-n+2) {
  display: none;
}

header .nav-middle > div > div > div div:nth-of-type(2) p:nth-of-type(4) {
  left: 100px;
}

@media (max-width: 300px) {
  header .nav-middle > div > div > div div:nth-of-type(1) {
    top: 46px;
  }

  header .nav-middle > div > div > div div:nth-of-type(2) {
    top: 35px;
  }
  
  header .nav-middle > div > div > div div:nth-of-type(2) p:nth-of-type(3),
  header .nav-middle > div > div > div div:nth-of-type(2) p:nth-of-type(4) {
    top: -70px;
  }
}

header .nav-middle > div > div > div div:nth-of-type(2) p a::after {
  content: "";
  display: inline-block;
  background-image:url('/icons/icon_orange-small-arrow-right.png');
  background-size: 5px 7px;
  background-repeat: no-repeat;
  width: 5px;
  height: 7px;
  margin-left: 5px;
}

header .expanded .nav-bottom > div > div > span.close {
  display: block;
  color: var(--background-color);
  font-size: var(--body-font-size-s);
}

header .nav-middle > div > div > div div:nth-of-type(3) span.close {
  font-size: var(--body-font-size-s);
  display: none;
}
/* ... */

